# loom

./: Cargo.toml  README.md  test.ik
.github/workflows/: nightly-release.yml
crates/geko/src/: io.rs
crates/geko_common/src/: lib.rs
crates/geko_ir/src/: stmt.rs
crates/geko_jit/src/: lib.rs
crates/geko_lex/src/: lexer.rs  token.rs
crates/geko_parse/src/: expr.rs  lib.rs  parser.rs  stmt.rs
crates/geko_rt/src/: interpreter.rs  lib.rs
crates/geko_sema/src/: lib.rs
crates/geko_tests/src/: assertion.rs
crates/squirrel/src/: main.rs
crates/squirrel_rt/: Cargo.toml
crates/tick/: Cargo.toml
crates/tick/src/: io.rs  main.rs
crates/tick_ast/: Cargo.toml
crates/tick_ast/src/: atom.rs  expr.rs  stmt.rs
crates/tick_common/: Cargo.toml
crates/tick_common/src/: lib.rs
crates/tick_lex/: Cargo.toml
crates/tick_parse/: Cargo.toml
crates/tick_rt/: Cargo.toml
crates/tick_sema/: Cargo.toml
crates/tick_tests/: Cargo.toml
crates/tick_tests/src/: assertion.rs  lex.rs  lib.rs
crates/tick_tests/src/snapshots/: bit_tests__sema__sema_5.snap  geko_tests__parse__parse_1.snap  geko_tests__parse__parse_2.snap  geko_tests__parse__parse_3.snap  geko_tests__sema__sema_1.snap  geko_tests__sema__sema_2.snap  geko_tests__sema__sema_3.snap  geko_tests__sema__sema_4.snap
crates/tick_wasm/: Cargo.toml
crates/tick_wasm/src/: io.rs  lib.rs
examples/bail/: example.gk
examples/dicts/: example.gk
examples/env/: env.ik
examples/lists/: lists.ik
examples/math/: a.ik
examples/todo/: example.gk
scripts/: build.sh
syntax/: DESIGN.md
(+45 files in other folders)
